[package]
name = "s3-automation"
version = "0.2.0"
edition = "2021"
author = ["Star-tears"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.24"
rust-s3 = "0.27.0"
tokio = { version = "1", features = ["full"] }
execute = "0.2.12"
image = "0.23.14"
qrcode = "0.12.0"
console = "0.15.7"
mime = "0.3.17"
mime_guess = "2.0.4"
